# supaclip

./: .env.example  .gitignore  .mcp.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  pyproject.toml
.claude/skills/: stitch-director.md
.claude/skills/movie-clips/: SKILL.md
.claude/skills/movie-recap/: SKILL.md
.claude/skills/stitch-director/: SKILL.md
.github/workflows/: ci.yml
clipper/: cli.py
clipper/catalog/: __init__.py  cli.py  db.py  ingest.py  mcp.py  paths.py
clipper/core/: cache.py  edl.py  ffmpeg.py  manifest.py
clipper/extract/: analyze.py  audio.py  cli.py
clipper/extract/backends/: gemma.py  gemma_video.py
clipper/stitch/: annotation.py  assembly.py  cli.py  effects.py  music.py  overlay.py  progress.py  reframe.py  render.py  transitions.py
clipper/stitch/tts/: __init__.py  cache.py  elevenlabs.py
docs/: architecture.md  caption-ost-quality-spec.md  claude-prompt.md  phase2.5.md  phase2.md  prd.md  stitch.md
docs/decisions/: 0001-movie-recap-layering.md  0002-subtitle-dialogue-ingestion.md  0003-source-summary-rollup.md  0004-movie-output-modes.md
examples/: README.md  edl-gta6-hair-v15.json  edl-gta6-hair.json
supaclip/: cli.py
supaclip/catalog/: __init__.py  cli.py  ingest.py  mcp.py  paths.py  schema.py  search.py  source.py
supaclip/core/: clips.py  edl.py  ffmpeg.py  log.py  manifest.py
supaclip/extract/: aggregate.py  analyze.py  chunking.py  cli.py  debug.py  debug_cli.py  dedupe.py  dry_chunk.py  llm.py  pipeline.py  profiles.py  segment.py  subtitles.py  summarize.py
supaclip/extract/backends/: _shared.py  frames.py  gemma.py  gemma_video.py  video.py
supaclip/stitch/: annotation.py  assembly.py  captions.py  cli.py  effects.py  encode.py  music.py  overlay.py  progress.py  reframe.py  render.py  transitions.py
supaclip/stitch/tts/: __init__.py  align.py  base.py  cache.py  elevenlabs.py  google.py
tests/: test_aggregate.py  test_align.py  test_analyze_events.py  test_assembly.py  test_captions.py  test_catalog.py  test_chunking.py  test_core.py  test_edl.py  test_effects_transitions.py  test_encode.py  test_gemma_video_chunking.py  test_llm.py  test_pipeline_concurrency.py  test_pipeline_file_segmenter.py  test_render_integration.py  test_stitch_filters.py  test_subtitles.py  test_summarize.py  test_tts.py  test_video_chunking.py
