[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supaclip"
version = "0.1.0"
description = "Extract gameplay clips and a Claude-readable manifest from local video"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Udit" }]
keywords = ["video", "clips", "gameplay", "llm", "claude", "mcp", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pydantic>=2.6",
    "openai>=1.30",
    "google-genai>=1.0",
    "scenedetect>=0.6.3",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2"]
mcp = ["mcp>=1.0"]
align = ["torch>=2.1", "torchaudio>=2.1"]

[project.scripts]
extract = "supaclip.extract.cli:main"
stitch = "supaclip.stitch.cli:main"
supaclip = "supaclip.cli:main"
supaclip-mcp = "supaclip.catalog.mcp:main"

[tool.setuptools.packages.find]
include = ["supaclip*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
