[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "supaclip"
version = "0.1.0"
description = "Turn long gameplay recordings into short-form videos, with Claude as the editor"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Udit" }]
keywords = ["video", "clips", "gameplay", "llm", "claude", "mcp", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "pydantic>=2.6",
    "openai>=1.30",
    "google-genai>=1.0",
    "scenedetect>=0.6.3",
    "python-dotenv>=1.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "build>=1.2", "ruff>=0.5"]
mcp = ["mcp>=1.0"]
align = ["torch>=2.1", "torchaudio>=2.1"]

[project.urls]
Homepage = "https://github.com/uditdc/supaclip"
Repository = "https://github.com/uditdc/supaclip"
Issues = "https://github.com/uditdc/supaclip/issues"
Changelog = "https://github.com/uditdc/supaclip/blob/main/CHANGELOG.md"

[project.scripts]
extract = "supaclip.extract.cli:main"
stitch = "supaclip.stitch.cli:main"
supaclip = "supaclip.cli:main"
supaclip-mcp = "supaclip.catalog.mcp:main"

[tool.setuptools.packages.find]
include = ["supaclip*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
supaclip = ["assets/fonts/*.ttf", "assets/fonts/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
# E501 (line length) is left to formatting judgment; B905 (zip strict=) is noise here.
ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B017", "E731"]  # broad pytest.raises and lambda fixtures are fine in tests
